--- a/style.css
+++ b/style.css
@@ -16,3 +16,21 @@ html {
     margin: 0;
     padding: 0;
 }
+
+body{
+    background-color: var(--very-dark-blue);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    background-color: var(--dark-desaturated-blue);
+    width: 375px;
+}
+
+.container__banner img{
+    max-width: 100%;
+}
