--- a/style.css
+++ b/style.css
@@ -28,22 +28,34 @@ body{
 
 .container{
     background-color: var(--dark-desaturated-blue);
-    width: 350px;
+    width: 280px;
+    border-radius: 1rem;
 }
 
 .container__content{
-    padding: 2rem;
+    padding: 1.8rem;
+    border-radius: 1rem 1rem 0 0;
+}
+
+.container__banner {
+    width: 100%;
+    height: 180px;
+    background-color: var(--soft-violet);
+    border-radius: 1rem 1rem 0 0;
+
 }
 
 .container__banner img{
-    max-width: 100%;
+    min-width: 100%;
+    height: 100%;
+    mix-blend-mode: multiply;
 }
 
 .container__content__title{
     color: var(--white);
     text-align: center;
     font-family: 'Inter';
-    font-size: 1.2rem;
+    font-size: 0.8rem;
 }
 
 .container__content__title span{
@@ -54,10 +66,10 @@ body{
     color: var(--slightly-transparent-white);
     font-weight: 500;
     text-align: center;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 0.7rem;
+    line-height: 1.2rem;
     font-family: 'Lexend Deca';
-    margin: 1.2rem 0;
+    margin: 0.5rem 0.5rem;
 }
 
 .container__content__summary{
@@ -74,14 +86,14 @@ body{
 .container__content__summary__topic__quantity{
     color: var(--white);
     font-family: 'Inter';
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     font-weight: 900;
 }
 
 .container__content__summary__topic__type{
     color: var(--slightly-transparent-white);
     font-family: 'Lexend Deca';
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     font-weight: 400;
     text-transform: uppercase;
 }
