--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 .container__content{
-    padding: 1.8rem;
+    padding: 1.8rem 1rem;
     border-radius: 1rem 1rem 0 0;
 }
 
@@ -55,7 +55,7 @@ body{
     color: var(--white);
     text-align: center;
     font-family: 'Inter';
-    font-size: 0.8rem;
+    font-size: 1.1rem;
 }
 
 .container__content__title span{
@@ -66,10 +66,10 @@ body{
     color: var(--slightly-transparent-white);
     font-weight: 500;
     text-align: center;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     line-height: 1.2rem;
     font-family: 'Lexend Deca';
-    margin: 0.5rem 0.5rem;
+    margin: 1.5rem 0.5rem;
 }
 
 .container__content__summary{
@@ -86,7 +86,7 @@ body{
 .container__content__summary__topic__quantity{
     color: var(--white);
     font-family: 'Inter';
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 900;
 }
 
@@ -95,5 +95,6 @@ body{
     font-family: 'Lexend Deca';
     font-size: 0.6rem;
     font-weight: 400;
+    margin-top: 0.2rem;
     text-transform: uppercase;
 }
